--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Azure Policy Intellisense",
   "description": "Enables intellisense via JSON schema for common Azure Policy formats and file types.",
   "publisher": "justin-grote",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.70.0"
   },
@@ -25,15 +25,15 @@
     "jsonValidation": [
       {
         "fileMatch": "**/{policy,azurepolicy}.json",
-        "url": "policyDefinition.schema.json"
+        "url": "./policyDefinition.schema.json"
       },
       {
         "fileMatch": "**/{policy,azurepolicy}.parameters.json",
-        "url": "policyParameters.schema.json"
+        "url": "./policyParameters.schema.json"
       },
       {
         "fileMatch": "**/{policy,azurepolicy}.rules.json",
-        "url": "policyRule.schema.json"
+        "url": "./policyRule.schema.json"
       }
     ]
   }
